clusters/cl03/apps/balance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: balance
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
  labels:
    app.kubernetes.io/name: balance
    app.kubernetes.io/part-of: arencloud-identity
    istio-discovery: mesh-demo
    istio.io/rev: demo
