clusters/cl03/apps/balance/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: balance
  namespace: balance
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  labels:
    app.kubernetes.io/name: balance
    app.kubernetes.io/component: gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: balance
      namespace: balance
      sectionName: https
  hostnames:
    - balance.arencloud.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: balance
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
